test/deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  namespace: default
  name: test
  labels:
    app: test

spec:
  replicas: 2
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - name: test
          image: nginx:1.17.1-alpine
          ports:
            - name: web
              containerPort: 80
