test/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: test
  annotations:
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip

spec:
  rules:
    - host: red
      http:
        paths:
          - path: /test
            backend:
              serviceName: test
              servicePort: web
