test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test

spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
  selector:
    app: test
